# fastapi

./: main.py  pyproject.toml  requirements.txt
config/: __init__.py  db_config.py  dependency.py
models/: __init__.py  roles_model.py  user_model.py  user_roles_model.py
routers/: __init__.py  auth.py  roles.py  user_roles.py  users.py
schema/: __init__.py  authSchema.py  rolesSchema.py
